--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -445,7 +445,7 @@
   "update-profile-step-4-modal-find-jobs-button": "Find a job",
   "update-profile-step-4-modal-header": "Thank you",
   "update-profile-step-4-modal-profile-button": "Your profile",
-  "update-profile-step-4-modal-sub-description": "Under your profile you can provide additional information that we are insterested in.",
+  "update-profile-step-4-modal-sub-description": "Under your profile you can provide additional information that we are insterested in or just go ahead and find a job!",
   "user.card.no.address": "No address",
   "user.missing.traits.form.close.button": "Close",
   "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
