--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -7,6 +7,7 @@
   "application.item.offered": "الشركة ترغب في توظيفك",
   "application.item.rejected": "لقد حصل شخص اخر على الوظيفة",
   "application.item.withdrawn": "تم سحب الطلب",
+  "applications.pager.section.no.applications": "No applications yet",
   "applications.title": "جست أرايفد",
   "apply.for.job.form.message.section": "هل هناك لمور أخرى تريد معرفتها؟",
   "apply.for.job.form.submit.button": "التسجيل",
@@ -273,7 +274,7 @@
   "job.card.applied": "قدّمت على الوظيفة",
   "job.card.closed.for.applications": "Closed",
   "job.card.currency.per.hour": "{{currency}} / الساعة\n",
-  "job.card.filled": "Job filled",
+  "job.card.filled": "Filled",
   "job.card.full.time": "دوام كامل",
   "job.card.hired": "You have been employed",
   "job.card.hours": "{{hours}} الساعات",
@@ -308,6 +309,7 @@
   "job.scope.section.until.further.notice": "حتى اشعار آخر",
   "job.short.description.section.title": "نبذة عن العمل",
   "job.tasks.section.title": "المسؤوليات",
+  "jobs.pager.section.no.jobs": "No jobs found",
   "jobs.title": "Number of jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "معرفة أساسية ",
   "language.proficiency.beginner": "مبتدئ",
@@ -427,12 +429,23 @@
   "sort.users.input.option.last.name": "Last Name (A-Z)",
   "sort.users.input.option.newest": "Newest",
   "sort.users.input.option.oldest": "Oldest",
+  "stepper.modal.next.button": "التالي",
+  "stepper.modal.previous.button": "Previous",
   "support.chat.info.message.description": "يرجى العلم بأنه قد يستغرق الأمر ما يصل إلى 72 ساعة للحصول على رد",
   "support.chat.info.message.header": "هذه ليست خدمة الدردشة الفورية",
   "support.chat.page.title": "تحدث مع Just Arrived",
   "support.chat.title": "جست أرايفد",
   "terms.frilans_finans.accept": "أنا اوفق على Frilans Finans",
   "terms": "الشروط والأحكام وعقد العمل",
+  "update-profile-step-2-modal-header": "Choose your skills",
+  "update-profile-step-1-modal-header": "تحميل سيرتك الذاتية",
+  "update-profile-step-3-modal-description": "Upload a profile picture",
+  "update-profile-step-3-modal-header": "Upload a profile picture",
+  "update-profile-step-4-modal-description": "You have successfully increased your chances to get a job!",
+  "update-profile-step-4-modal-find-jobs-button": "Find a job",
+  "update-profile-step-4-modal-header": "Thank you",
+  "update-profile-step-4-modal-profile-button": "صفحة معلومات شخصية",
+  "update-profile-step-4-modal-sub-description": "Under your profile you can provide additional information that we are insterested in or just go ahead and find a job!",
   "user.card.no.address": "لا يوجد عنوان",
   "user.missing.traits.form.close.button": "أقفِل",
   "user.missing.traits.form.information.provided.message.description": "لقد نجحت في زيادة فرصك للحصول على وظائف.",
@@ -484,5 +497,20 @@
   "validations.maxlength": "طويل جدا (الحد الأقصى {{maxLength}} من الأحرف)",
   "validations.minlength": "قصير جدا (الحد الأدنى {{minLength}} من الأحرف)",
   "validations.pattern": "لا يتوافق مع النمط المطلوب",
-  "validations.required": "لا يمكن أن يكون فارغ"
+  "validations.required": "لا يمكن أن يكون فارغ",
+  "welcome-step-1-modal-header": "مرحبًا {{username}}!",
+  "welcome-step-1-modal-point-1": "We want to make sure that the labour market benefits from your skills and experience.",
+  "welcome-step-1-modal-point-2": "We want to help you get intergrated into the Swedish society by finding a job.",
+  "welcome-step-1-modal-point-3": "We can help you get the experience you need to enter the Swedish labour market.",
+  "welcome-step-1-modal-point-4": "We want to see your potential grow and glow!",
+  "welcome-step-1-modal-title": "Why Just Arrived?",
+  "welcome-step-2-modal-header": "مرحبًا {{username}}!",
+  "welcome-step-2-modal-point-1": "You have ideas, experience and skills, valuable for our society.",
+  "welcome-step-2-modal-point-2": "You are an important part of building the future.",
+  "welcome-step-2-modal-point-3": "We believe in you!",
+  "welcome-step-2-modal-title": "Why You?",
+  "welcome-step-3-modal-description": "The next step is to update your profile in order to increase your chances to get a job.",
+  "welcome-step-3-modal-find-jobs-button": "Find a job",
+  "welcome-step-3-modal-title": "أهلا بك في Just Arrived!",
+  "welcome-step-3-modal-update-profile-button": "Update profile"
 }
