--- a/src/assets/i18n/fa_AF.json
+++ b/src/assets/i18n/fa_AF.json
@@ -7,6 +7,7 @@
   "application.item.offered": "Företaget vill anlita dig",
   "application.item.rejected": "Someone else got the job",
   "application.item.withdrawn": "The application was withdrawn",
+  "applications.pager.section.no.applications": "No applications yet",
   "applications.title": "Just Arrived",
   "apply.for.job.form.message.section": "Anything else you want us to know?",
   "apply.for.job.form.submit.button": "Apply",
@@ -273,7 +274,7 @@
   "job.card.applied": "شما برای این ماموریت کاری درخواست ارسال نموده‌اید",
   "job.card.closed.for.applications": "Closed",
   "job.card.currency.per.hour": "{{currency}}/hour",
-  "job.card.filled": "Job filled",
+  "job.card.filled": "Filled",
   "job.card.full.time": "Full time",
   "job.card.hired": "You have been employed",
   "job.card.hours": "{{hours}} hours",
@@ -308,6 +309,7 @@
   "job.scope.section.until.further.notice": "Until further notice",
   "job.short.description.section.title": "Short about the job",
   "job.tasks.section.title": "Tasks",
+  "jobs.pager.section.no.jobs": "No jobs found",
   "jobs.title": "Number of jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
@@ -427,12 +429,23 @@
   "sort.users.input.option.last.name": "Last Name (A-Z)",
   "sort.users.input.option.newest": "Newest",
   "sort.users.input.option.oldest": "Oldest",
+  "stepper.modal.next.button": "Next",
+  "stepper.modal.previous.button": "Previous",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
   "support.chat.info.message.header": "This is not an instant chat service",
   "support.chat.page.title": "Chat with Just Arrived",
   "support.chat.title": "Just Arrived",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "terms, conditions and employment contract",
+  "update-profile-step-2-modal-header": "Choose your skills",
+  "update-profile-step-1-modal-header": "Upload your resume",
+  "update-profile-step-3-modal-description": "Upload a profile picture",
+  "update-profile-step-3-modal-header": "Upload a profile picture",
+  "update-profile-step-4-modal-description": "You have successfully increased your chances to get a job!",
+  "update-profile-step-4-modal-find-jobs-button": "Find a job",
+  "update-profile-step-4-modal-header": "Thank you",
+  "update-profile-step-4-modal-profile-button": "Your profile",
+  "update-profile-step-4-modal-sub-description": "Under your profile you can provide additional information that we are insterested in or just go ahead and find a job!",
   "user.card.no.address": "No address",
   "user.missing.traits.form.close.button": "دریچه را ببندید",
   "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
@@ -484,5 +497,20 @@
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
   "validations.pattern": "does not conform to the required pattern",
-  "validations.required": "can't be blank"
+  "validations.required": "can't be blank",
+  "welcome-step-1-modal-header": "Welcome {{username}}!",
+  "welcome-step-1-modal-point-1": "We want to make sure that the labour market benefits from your skills and experience.",
+  "welcome-step-1-modal-point-2": "We want to help you get intergrated into the Swedish society by finding a job.",
+  "welcome-step-1-modal-point-3": "We can help you get the experience you need to enter the Swedish labour market.",
+  "welcome-step-1-modal-point-4": "We want to see your potential grow and glow!",
+  "welcome-step-1-modal-title": "Why Just Arrived?",
+  "welcome-step-2-modal-header": "Welcome {{username}}!",
+  "welcome-step-2-modal-point-1": "You have ideas, experience and skills, valuable for our society.",
+  "welcome-step-2-modal-point-2": "You are an important part of building the future.",
+  "welcome-step-2-modal-point-3": "We believe in you!",
+  "welcome-step-2-modal-title": "Why You?",
+  "welcome-step-3-modal-description": "The next step is to update your profile in order to increase your chances to get a job.",
+  "welcome-step-3-modal-find-jobs-button": "Find a job",
+  "welcome-step-3-modal-title": "Välkommen till Just Arrived!",
+  "welcome-step-3-modal-update-profile-button": "Update profile"
 }
