--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -2,11 +2,12 @@
   "already.registered.modal.button": "Logga in",
   "already.registered.modal.info": "Det verkar som att det redan finns ett konto som använder {{emailOrPhone}}, så vi föreslår att du loggar in istället. Om du glömt ditt lösenord så kan du återställa det genom att klicka på \"Glömt ditt lösenord?\" ovan",
   "already.registered.modal.title": "{{emailOrPhone}} är redan registrerat",
-  "application.item.applied": "Du har ansökt om jobbet",
+  "application.item.applied": "Du har sökt jobbet",
   "application.item.hired": "Du har blivit anställd",
   "application.item.offered": "Företaget vill anlita dig",
   "application.item.rejected": "Någon annan fick jobbet",
   "application.item.withdrawn": "Ansökan drogs tillbaka",
+  "applications.pager.section.no.applications": "Inga ansökningar än",
   "applications.title": "Just Arrived",
   "apply.for.job.form.message.section": "Någonting mer du vill att vi ska veta?",
   "apply.for.job.form.submit.button": "Ansök",
@@ -45,7 +46,7 @@
   "component.loading": "Laddar..",
   "confirmation.applied.for.job.button": "Hitta fler jobb",
   "confirmation.applied.for.job.description": "Vi på Just Arrived håller tummarna. Om uppdragsgivaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Ansökningar. Där samlas även all kommunikation som sker med uppdragsgivaren.",
-  "confirmation.applied.for.job.title": "Du har ansökt om jobbet",
+  "confirmation.applied.for.job.title": "Du har sökt jobbet",
   "confirmation.contact.button": "Tillbaka till kontakt",
   "confirmation.contact.description": "Vi kommer svara så snart vi kan",
   "confirmation.contact.title": "Tack för ditt meddelande!",
@@ -308,6 +309,7 @@
   "job.scope.section.until.further.notice": "Tillsvidare",
   "job.short.description.section.title": "Kort om jobbet",
   "job.tasks.section.title": "Uppgifter",
+  "jobs.pager.section.no.jobs": "Inga jobb hittades",
   "jobs.title": "Antal jobb ({{nbrOfJobs}})",
   "language.proficiency.basic": "Grundläggande kunskaper",
   "language.proficiency.beginner": "Nybörjare",
@@ -427,12 +429,23 @@
   "sort.users.input.option.last.name": "Efternamn (A-Z)",
   "sort.users.input.option.newest": "Nyast",
   "sort.users.input.option.oldest": "Äldst",
+  "stepper.modal.next.button": "Nästa",
+  "stepper.modal.previous.button": "Föregående",
   "support.chat.info.message.description": "Tänk på att det kan ta upp till 72 timmar att få svar",
   "support.chat.info.message.header": "Det här är inte en direktchat",
   "support.chat.page.title": "Chatta med Just Arrived",
   "support.chat.title": "Just Arrived",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "regler, villkor och anställningskontrakt",
+  "update-profile-step-2-modal-header": "Välj dina kompetenser",
+  "update-profile-step-1-modal-header": "Ladda upp ditt CV",
+  "update-profile-step-3-modal-description": "Ladda upp en profilbild",
+  "update-profile-step-3-modal-header": "Ladda upp en profilbild",
+  "update-profile-step-4-modal-description": "Du har ökat dina chanser att få ett jobb!",
+  "update-profile-step-4-modal-find-jobs-button": "Hitta ett jobb",
+  "update-profile-step-4-modal-header": "Tack",
+  "update-profile-step-4-modal-profile-button": "Din profil",
+  "update-profile-step-4-modal-sub-description": "Under din profil så kan du ge ytterligare information som vi är intresserade av eller så kan du nu direkt försöka hitta ett jobb!",
   "user.card.no.address": "Address saknas",
   "user.missing.traits.form.close.button": "Stäng",
   "user.missing.traits.form.information.provided.message.description": "Du har framgångsrikt ökat dina chanser att få jobb.",
@@ -484,5 +497,20 @@
   "validations.maxlength": "är för lång (max {{maxLength}} tecken)",
   "validations.minlength": "är för kort (minst {{minLength}} tecken)",
   "validations.pattern": "följer inte det format som krävs",
-  "validations.required": "kan inte vara tom"
+  "validations.required": "kan inte vara tom",
+  "welcome-step-1-modal-header": "Välkommen {{username}}!",
+  "welcome-step-1-modal-point-1": "Vi vill säkerställa att arbetsmarknaden drar nytta av dina kompetenser och erfarenheter.",
+  "welcome-step-1-modal-point-2": "Vi vill hjälpa dig att integreras i det svenska samhället genom att hitta ett jobb.",
+  "welcome-step-1-modal-point-3": "Vi kan hjälpa dig att få de erfarenheter du behöver för att komma in på svenska arbetsmarknaden.",
+  "welcome-step-1-modal-point-4": "Vi vill se din potential växa och glänsa!",
+  "welcome-step-1-modal-title": "Varför Just Arrived?",
+  "welcome-step-2-modal-header": "Välkommen {{username}}!",
+  "welcome-step-2-modal-point-1": "Du har idéer, erfarenheter och kompetenser som är värdefulla för vårt samhälle.",
+  "welcome-step-2-modal-point-2": "Du är en viktig del av att bygga framtiden.",
+  "welcome-step-2-modal-point-3": "Vi tror på dig!",
+  "welcome-step-2-modal-title": "Varför Du?",
+  "welcome-step-3-modal-description": "Nästa steg är att uppdatera din profil för att öka dina chanser att få ett jobb.",
+  "welcome-step-3-modal-find-jobs-button": "Hitta ett jobb",
+  "welcome-step-3-modal-title": "Välkommen till Just Arrived!",
+  "welcome-step-3-modal-update-profile-button": "Uppdatera profil"
 }
