--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -136,6 +136,8 @@
   "how.it.works.section.update.profile.description.paragraph.1": "This is the most important thing to increase your chances of getting any job through Just Arrived!",
   "how.it.works.section.update.profile.description.paragraph.2": "Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
   "how.it.works.section.update.profile.description.title": "2. Update profile",
+  "input.address.label": "Address",
+  "input.address.placeholder": "Address",
   "input.account.number.label": "Account number",
   "input.account.number.placeholder": "Account number",
   "input.apply.message.label": "Additonal message",
@@ -348,6 +350,7 @@
   "menu.main.logout": "Log out",
   "menu.main.my_assignment": "My Applications",
   "menu.main.profile": "Profile",
+  "subscribe.form.submit.button": "Subscribe",
   "menu.main.register": "Create account",
   "menu.main.staffing_time_report": "Time report",
   "menu.main.support.chat": "Chat with Just Arrived",
