Added a city autocomplete input component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -136,8 +136,10 @@
   "how.it.works.section.update.profile.description.paragraph.1": "This is the most important thing to increase your chances of getting any job through Just Arrived!",
   "how.it.works.section.update.profile.description.paragraph.2": "Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
   "how.it.works.section.update.profile.description.title": "2. Update profile",
-  "input.address.label": "Address",
-  "input.address.placeholder": "Address",
+  "input.address.autocomplete.label": "Address",
+  "input.address.autocomplete.placeholder": "Address",
+  "input.city.autocomplete.label": "City",
+  "input.city.autocomplete.placeholder": "City",
   "input.account.number.label": "Account number",
   "input.account.number.placeholder": "Account number",
   "input.apply.message.label": "Additonal message",
