Added a hint explaining that one can have several subscriptions

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -126,6 +126,7 @@
   "home.jobs.slider.user.jobs.will.perform.label": "Hired",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
+  "subscribe.form.info": "You can have several active subscriptions for different cities and occupations",
   "confirmation.subscribed.title": "Thank you for subscribing!",
   "confirmation.subscribed.description": "We will send out notifications to your email containing relevant jobs according to your subscription!",
   "input.job.digest.notification.frequency.label": "How often do you want to be notified of new jobs?",
