--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -129,8 +129,8 @@
   "subscribe.form.info": "You can have several active subscriptions for different cities and occupations",
   "confirmation.subscribed.title": "Thank you for subscribing!",
   "confirmation.subscribed.description": "We will send out notifications to your email containing relevant jobs according to your subscription!",
-  "confirmation.subscribed.title": "You have canceled the specified subscrition!",
-  "confirmation.subscribed.description": "You will no longer get such job openings subcription emails.",
+  "confirmation.unsubscribed.title": "You have canceled the specified subscrition!",
+  "confirmation.unsubscribed.description": "You will no longer get such job openings subcription emails.",
   "input.job.digest.notification.frequency.label": "How often do you want to be notified of new jobs?",
   "input.job.digest.notification.frequency.placeholder": "Notification Frequency",
   "how.it.works.section.create.accont.button": "Create account",
