Manage subscriber pager implemented

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,10 @@
 {
+  "job.digests.pager.section.subscription.title": "Subscription {{subscriptionNumber}}",
+  "subscribe.form.update.button": "Update",
+  "subscribe.form.delete.button": "Delete",
+  "job.digests.pager.section.empty": "You have no active subscriptions",
+  "job.digests.pager.section.title": "My active subscriptions",
+  "subscribe.new.title": "New subscription",
   "subscribe.title": "Manage job subscriptions",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
@@ -444,7 +450,7 @@
   "stepper.modal.next.button": "Next",
   "stepper.modal.previous.button": "Previous",
   "subscribe.form.city.hint": "Choose a city if you only want to get notified by job openings close to you",
-  "subscribe.form.info": "You can have several active subscriptions for different cities and occupations",
+  "subscribe.form.info": "Scroll down to see your active subscriptions",
   "subscribe.form.submit.button": "Subscribe",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
   "support.chat.info.message.header": "This is not an instant chat service",
