Fix so pagers are wrapped in anchors for crawlers

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "job.digests.pager.section.subscription.title": "Subscription {{subscriptionNumber}}",
-  "subscribe.form.update.button": "Update",
-  "subscribe.form.delete.button": "Delete",
+  "job.digest.form.update.button": "Update",
+  "job.digest.form.delete.button": "Delete",
   "job.digests.pager.section.empty": "You have no active subscriptions",
   "job.digests.pager.section.title": "My active subscriptions",
   "subscribe.new.title": "New subscription",
@@ -449,9 +449,9 @@
   "sort.users.input.option.oldest": "Oldest",
   "stepper.modal.next.button": "Next",
   "stepper.modal.previous.button": "Previous",
-  "subscribe.form.city.hint": "Choose a city if you only want to get notified by job openings close to you",
-  "subscribe.form.info": "Scroll down to see your active subscriptions",
-  "subscribe.form.submit.button": "Subscribe",
+  "job.digest.form.city.hint": "Choose a city if you only want to get notified by job openings close to you",
+  "job.digest.form.info": "Scroll down to see your active subscriptions",
+  "job.digest.form.submit.button": "Subscribe",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
   "support.chat.info.message.header": "This is not an instant chat service",
   "support.chat.page.title": "Chat with Just Arrived",
