Jobdigests can now have many addresses

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -439,6 +439,7 @@
   "skill.proficiency.basic": "Basic knowledge",
   "skill.proficiency.beginner": "Beginner",
   "skill.proficiency.expert": "Expert",
+  "job.digest.form.max.cities": "You can not add any more cities",
   "skill.proficiency.intermediate": "Intermediate knowledge",
   "skill.proficiency.professional": "Professional",
   "sort.users.input.option.first.name.reverse": "First Name (Z-A)",
@@ -449,7 +450,7 @@
   "sort.users.input.option.oldest": "Oldest",
   "stepper.modal.next.button": "Next",
   "stepper.modal.previous.button": "Previous",
-  "job.digest.form.city.hint": "Choose a city if you only want to get notified by job openings close to you",
+  "job.digest.form.city.hint": "Choose a few cities if you only want to get notified by job openings close to them",
   "job.digest.form.info": "Scroll down to see your active subscriptions",
   "job.digest.form.submit.button": "Subscribe",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
