Add newcomer pitch section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -409,6 +409,10 @@
   "meta.user.profile.title": "Your profile",
   "missing.payment.information.modal.button": "Continue",
   "missing.payment.information.modal.title": "In order to get payed you need to provide the following missing information",
+  "section.newcomer_pitch.title": "Ta första steget in på arbetsmarknaden i Sverige",
+  "section.newcomer_pitch.body": "Just Arrived matchar dig som är nyanländ med arbetsgivare som behöver din kunskap och erfarenhet.",
+  "section.newcomer_pitch.register.button": "Register profile",
+  "section.newcomer_pitch.jobs.button": "See current jobs",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
