Add employer pitch section i18n

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -413,6 +413,9 @@
   "section.newcomer_pitch.body": "Just Arrived matchar dig som är nyanländ med arbetsgivare som behöver din kunskap och erfarenhet.",
   "section.newcomer_pitch.register.button": "Register profile",
   "section.newcomer_pitch.jobs.button": "See current jobs",
+  "section.employer_pitch.title": "Vi hjälper dig att hitta ny kompetens",
+  "section.employer_pitch.body": "Snabbt, enkelt och tryggt! Vi har ett stort nätverk av nyanlända kandidater. Självklart valideras kompetens erfarenhet och språkkunskaper för en bra matchning.",
+  "section.employer_pitch.read_more.button": "Read more",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
