Pull translations from Transifex

--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -58,6 +58,10 @@
   "confirmation.password.reset.title": "Successfully changed your password!",
   "confirmation.signed.for.job.description": "Just Arrived will be in touch as soon as possible so don't forget to answer your phone and check your emails",
   "confirmation.signed.for.job.title": "We believe in you! Just Arrived is confident that you will perform this job exceptionally!",
+  "confirmation.subscribed.description": "We will send out notifications to your email containing relevant jobs according to your subscription!",
+  "confirmation.subscribed.title": "Thank you for subscribing!",
+  "confirmation.unsubscribed.description": "You will no longer get such job openings subcription emails.",
+  "confirmation.unsubscribed.title": "You have canceled the specified subscrition!",
   "contact.form.description": "پوښتنې یا اندیښنې؟ موږ خوښ یو چې مرسته کوو!",
   "contact.form.instruction": "لاندې خپل توضیحات ولیکئ.",
   "contact.form.submit.button": "لیږل",
@@ -138,12 +142,16 @@
   "how.it.works.section.update.profile.description.title": "2. Update profile",
   "input.account.number.label": "د کارت لمبر",
   "input.account.number.placeholder": "د کارت لمبر",
+  "input.address.autocomplete.label": "Address",
+  "input.address.autocomplete.placeholder": "Address",
   "input.apply.message.label": "Additonal message",
   "input.apply.message.placeholder": "Additonal message",
   "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
   "input.bank.account.label": "Swedish bank account (clearing number + account number)",
   "input.bank.account.placeholder": "Bank account",
   "input.chat.message.placeholder": "Write a message",
+  "input.city.autocomplete.label": "City",
+  "input.city.autocomplete.placeholder": "City",
   "input.city.label": "City",
   "input.city.placeholder": "City",
   "input.comment.placeholder": "خپل نظریات ولیکئ",
@@ -185,6 +193,8 @@
   "input.interests.hint": "Please rate how interested you are in the chosen interests",
   "input.interests.label": "Interests",
   "input.interests.placeholder": "Interests",
+  "input.job.digest.notification.frequency.label": "How often do you want to be notified of new jobs?",
+  "input.job.digest.notification.frequency.placeholder": "Notification Frequency",
   "input.job.experience.label": "کاري تجربه",
   "input.job.experience.placeholder": "کاري تجربه",
   "input.languages.hint": "Please rate how good you are at the chosen languages",
@@ -210,6 +220,7 @@
   "input.personal.id.label": "Personal ID",
   "input.phone.label": "تلیفون",
   "input.phone.placeholder": "تلیفون",
+  "input.primary.occupations.label": "Choose job occupations that you are interested in",
   "input.repeat.password.label": "Repeat password",
   "input.repeat.password.placeholder": "Repeat password",
   "input.residence.permit.back.description": "Back photo of my residence permit",
@@ -289,6 +300,15 @@
   "job.company.description.section.title": "Short about {{company}}",
   "job.description.section.header": "توضیحات",
   "job.description.section.title": "About the job",
+  "job.digest.form.city.hint": "Choose a few cities if you only want to get notified by job openings close to them",
+  "job.digest.form.delete.button": "Delete",
+  "job.digest.form.info": "Scroll down to see your active subscriptions",
+  "job.digest.form.max.cities": "You can not add any more cities",
+  "job.digest.form.submit.button": "Subscribe",
+  "job.digest.form.update.button": "Update",
+  "job.digests.pager.section.empty": "You have no active subscriptions",
+  "job.digests.pager.section.subscription.title": "Subscription {{subscriptionNumber}}",
+  "job.digests.pager.section.title": "My active subscriptions",
   "job.important.information.section.address.title": "Address",
   "job.important.information.section.employer.title": "Employer",
   "job.important.information.section.hours": "{{hours}} hours",
@@ -431,14 +451,16 @@
   "sort.users.input.option.oldest": "Oldest",
   "stepper.modal.next.button": "Next",
   "stepper.modal.previous.button": "Previous",
+  "subscribe.new.title": "New subscription",
+  "subscribe.title": "Manage job subscriptions",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
   "support.chat.info.message.header": "This is not an instant chat service",
   "support.chat.page.title": "Chat with Just Arrived",
   "support.chat.title": "Just Arrived (جسټ آرایوډ)",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "terms, conditions and employment contract",
-  "update-profile-step-2-modal-header": "Choose your skills",
   "update-profile-step-1-modal-header": "Upload your resume",
+  "update-profile-step-2-modal-header": "Choose your skills",
   "update-profile-step-3-modal-description": "Upload a profile picture",
   "update-profile-step-3-modal-header": "Upload a profile picture",
   "update-profile-step-4-modal-description": "You have successfully increased your chances to get a job!",
