--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -58,6 +58,10 @@
   "confirmation.password.reset.title": "Ditt lösenord har blivit ändrat!",
   "confirmation.signed.for.job.description": "Just Arrived kommer att kontakta dig så snart som möjligt så glöm inte att svara i telefonen och kolla din e-post",
   "confirmation.signed.for.job.title": "\nVi tror på dig! Just Arrived är säker på att du kommer att utföra jobbet exceptionellt!",
+  "confirmation.subscribed.description": "Vi kommer skicka email till dig med jobb som passar dig",
+  "confirmation.subscribed.title": "Tack för att du prenumererar",
+  "confirmation.unsubscribed.description": "Du kommer inte längre få sådana jobb email.",
+  "confirmation.unsubscribed.title": "Du har avbrutit den här prenumeration!",
   "contact.form.description": "Frågor eller funderingar? Vi hjälper gärna till!",
   "contact.form.instruction": "Fyll i dina uppgifter nedan.",
   "contact.form.submit.button": "Skicka",
@@ -138,12 +142,16 @@
   "how.it.works.section.update.profile.description.title": "2. Uppdatera profil",
   "input.account.number.label": "Kontonummer",
   "input.account.number.placeholder": "Kontonummer",
+  "input.address.autocomplete.label": "Adress",
+  "input.address.autocomplete.placeholder": "Adress",
   "input.apply.message.label": "Extra meddelande",
   "input.apply.message.placeholder": "Extra meddelande",
   "input.at.und.label": "Har du AT-UND? (Är du tillåten att jobba)",
   "input.bank.account.label": "Svenskt bankkonto (clearing nummer + kontonummer)",
   "input.bank.account.placeholder": "Bankkonto",
   "input.chat.message.placeholder": "Skriv ett meddelande",
+  "input.city.autocomplete.label": "Stad",
+  "input.city.autocomplete.placeholder": "Stad",
   "input.city.label": "Stad",
   "input.city.placeholder": "Stad",
   "input.comment.placeholder": "Skriv en kommentar",
@@ -185,6 +193,8 @@
   "input.interests.hint": "Bedöm hur intresserad du är av valda intressen",
   "input.interests.label": "Intressen",
   "input.interests.placeholder": "Intressen",
+  "input.job.digest.notification.frequency.label": "Hur ofta vill du få notifikationer om nya jobb?",
+  "input.job.digest.notification.frequency.placeholder": "Notifikiationsfrekvens",
   "input.job.experience.label": "Arbetslivserfarenhet",
   "input.job.experience.placeholder": "Arbetslivserfarenhet",
   "input.languages.hint": "\nBedöm hur bra du är på de valda språken",
@@ -210,6 +220,7 @@
   "input.personal.id.label": "Personligt ID",
   "input.phone.label": "Telefon",
   "input.phone.placeholder": "Telefon",
+  "input.primary.occupations.label": "Välj vilka yrken du är intresserad av",
   "input.repeat.password.label": "Upprepa lösenord",
   "input.repeat.password.placeholder": "Upprepa lösenord",
   "input.residence.permit.back.description": "Foto på baksidan av ditt uppehållstillstånd",
@@ -289,6 +300,15 @@
   "job.company.description.section.title": "Kort om {{company}}",
   "job.description.section.header": "Beskrivning",
   "job.description.section.title": "Om jobbet",
+  "job.digest.form.city.hint": "Välj de städer som du vill få nya jobb rekommendationer från",
+  "job.digest.form.delete.button": "Ta bort",
+  "job.digest.form.info": "Skrolla ner för att se dina aktiva prenumerationer",
+  "job.digest.form.max.cities": "Du kan inte lägga till fler städer",
+  "job.digest.form.submit.button": "Prenumera",
+  "job.digest.form.update.button": "Uppdatera",
+  "job.digests.pager.section.empty": "Du har inga aktiva prenumerationer",
+  "job.digests.pager.section.subscription.title": "Prenumeration {{subscriptionNumber}}",
+  "job.digests.pager.section.title": "Dina aktiva prenumerationer",
   "job.important.information.section.address.title": "Adress",
   "job.important.information.section.employer.title": "Uppdragsgivare",
   "job.important.information.section.hours": "{{hours}} timmar",
@@ -431,14 +451,16 @@
   "sort.users.input.option.oldest": "Äldst",
   "stepper.modal.next.button": "Nästa",
   "stepper.modal.previous.button": "Föregående",
+  "subscribe.new.title": "Ny prenumeration",
+  "subscribe.title": "Hantera jobb prenumerationer",
   "support.chat.info.message.description": "Tänk på att det kan ta upp till 72 timmar att få svar",
   "support.chat.info.message.header": "Det här är inte en direktchat",
   "support.chat.page.title": "Chatta med Just Arrived",
   "support.chat.title": "Just Arrived",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "regler, villkor och anställningskontrakt",
-  "update-profile-step-2-modal-header": "Välj dina kompetenser",
   "update-profile-step-1-modal-header": "Ladda upp ditt CV",
+  "update-profile-step-2-modal-header": "Välj dina kompetenser",
   "update-profile-step-3-modal-description": "Ladda upp en profilbild",
   "update-profile-step-3-modal-header": "Ladda upp en profilbild",
   "update-profile-step-4-modal-description": "Du har ökat dina chanser att få ett jobb!",
