Add /subscriptions to main navigation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -369,6 +369,7 @@
   "menu.main.my_assignment": "My Applications",
   "menu.main.profile": "Profile",
   "menu.main.register": "Create account",
+  "menu.main.subscriptions": "Job subscriptions",
   "menu.main.staffing_time_report": "Time report",
   "menu.main.support.chat": "Chat with Just Arrived",
   "meta.404.description": "The page or resource you are looking for can not be found",
