Update job subsc. page to only display relevant sections

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -453,7 +453,7 @@
   "stepper.modal.next.button": "Next",
   "stepper.modal.previous.button": "Previous",
   "subscribe.new.title": "New subscription",
-  "subscribe.title": "Manage job subscriptions",
+  "subscribe.title": "Job subscriptions",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
   "support.chat.info.message.header": "This is not an instant chat service",
   "support.chat.page.title": "Chat with Just Arrived",
