Add new job subscription button to the bottom of the jobs listing page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -452,6 +452,7 @@
   "sort.users.input.option.oldest": "Oldest",
   "stepper.modal.next.button": "Next",
   "stepper.modal.previous.button": "Previous",
+  "subscribe.new.bottom_jobs_page_title": "Get notified when new jobs are available",
   "subscribe.new.title": "New subscription",
   "subscribe.title": "Job subscriptions",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
