Hooked up the menu to api data

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "guide.menu.title": "Job guide",
   "guide.card.welcome.button": "Start",
   "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
   "guide.card.welcome.paragraph.1": "Are you new in Sweden and not sure what to do when searching for a job? In this guide we have collected information and tips that will help you.",
