Hint pager copy

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,6 @@
 {
+  "hint.pager.previous": "Previous",
+  "hint.pager.next": "Next",
   "guide.menu.title": "Job guide",
   "guide.card.welcome.button": "Start",
   "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
